--- a/myViz.html
+++ b/myViz.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My D3.js Bar Chart</title>
+    <title>My Visualizations</title>
     <!-- Load the D3.js Library -->
     <script src="https://d3js.org/d3.v4.js"></script>
 </head>
 <body>
-    <h1>My D3.js Bar Chart</h1>
-    <!-- Chart Container -->
-    <div id="my_dataviz"></div>
+    <h1>My Visualizations</h1>
 
+    <!-- D3.js Bar Chart -->
+    <p>This is my D3.js bar chart:</p>
+    <div id="my_dataviz"></div>
     <script>
         // Set chart dimensions and margins
         var margin = { top: 30, right: 30, bottom: 70, left: 60 },
@@ -33,6 +34,7 @@
                 .range([0, width])
                 .domain(data.map(function(d) { return d.Country; }))
                 .padding(0.2);
+
             svg.append("g")
                 .attr("transform", "translate(0," + height + ")")
                 .call(d3.axisBottom(x))
@@ -44,8 +46,8 @@
             var y = d3.scaleLinear()
                 .domain([0, 13000])
                 .range([height, 0]);
-            svg.append("g")
-                .call(d3.axisLeft(y));
+
+            svg.append("g").call(d3.axisLeft(y));
 
             // Add bars with a transition effect
             svg.selectAll("mybar")
@@ -62,6 +64,39 @@
                 .attr("y", function(d) { return y(d.Value); })
                 .attr("height", function(d) { return height - y(d.Value); });
         });
+    </script>
+
+    <!-- Tableau Visualization -->
+    <p>This is my Tableau visualization:</p>
+    <div class='tableauPlaceholder' id='viz1731901393223' style='position: relative'>
+        <noscript>
+            <a href='#'>
+                <img alt='Monthly Sales Trend ' src='https://public.tableau.com/static/images/la/lab4_1_17317117694860/MonthlySalesTrend/1_rss.png' style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+            <param name='embed_code_version' value='3' /> 
+            <param name='name' value='lab4_1_17317117694860/MonthlySalesTrend' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https://public.tableau.com/static/images/la/lab4_1_17317117694860/MonthlySalesTrend/1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+        </object>
+    </div>
+    <script type='text/javascript'>
+        var divElement = document.getElementById('viz1731901393223');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        vizElement.style.width='100%';
+        vizElement.style.height=(divElement.offsetWidth * 0.75) + 'px';
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
 </body>
 </html>
