--- a/myViz.html
+++ b/myViz.html
@@ -66,8 +66,8 @@
         });
     </script>
 
-    <!-- Tableau Visualization -->
-    <p>This is my Tableau visualization:</p>
+    <!-- Tableau Visualization 1 -->
+    <p>This is my first Tableau visualization:</p>
     <div class='tableauPlaceholder' id='viz1731901393223' style='position: relative'>
         <noscript>
             <a href='#'>
@@ -94,6 +94,40 @@
         var vizElement = divElement.getElementsByTagName('object')[0];
         vizElement.style.width='100%';
         vizElement.style.height=(divElement.offsetWidth * 0.75) + 'px';
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+
+    <!-- Tableau Visualization 2 -->
+    <p>This is my second Tableau visualization:</p>
+    <div class='tableauPlaceholder' id='viz1731902716834' style='position: relative'>
+        <noscript>
+            <a href='#'>
+                <img alt='Sheet 1 ' src='https://public.tableau.com/static/images/la/lab4_2_17309233156550/Sheet1/1_rss.png' style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+            <param name='embed_code_version' value='3' /> 
+            <param name='site_root' value='' />
+            <param name='name' value='lab4_2_17309233156550/Sheet1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https://public.tableau.com/static/images/la/lab4_2_17309233156550/Sheet1/1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+        </object>
+    </div>
+    <script type='text/javascript'>
+        var divElement = document.getElementById('viz1731902716834');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        vizElement.style.width='100%';
+        vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
         var scriptElement = document.createElement('script');
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
         vizElement.parentNode.insertBefore(scriptElement, vizElement);
