--- a/myViz.html
+++ b/myViz.html
@@ -110,7 +110,6 @@
         <object class='tableauViz' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
             <param name='embed_code_version' value='3' /> 
-            <param name='site_root' value='' />
             <param name='name' value='lab4_2_17309233156550/Sheet1' />
             <param name='tabs' value='no' />
             <param name='toolbar' value='yes' />
@@ -127,7 +126,40 @@
         var divElement = document.getElementById('viz1731902716834');
         var vizElement = divElement.getElementsByTagName('object')[0];
         vizElement.style.width='100%';
-        vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
+        vizElement.style.height=(divElement.offsetWidth * 0.75) + 'px';
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+
+    <!-- Tableau Visualization 3 -->
+    <p>This is my third Tableau visualization:</p>
+    <div class='tableauPlaceholder' id='viz1731903235285' style='position: relative'>
+        <noscript>
+            <a href='#'>
+                <img alt='Story 1 ' src='https://public.tableau.com/static/images/Ta/TableuLab_17315334802240/Story1/1_rss.png' style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+            <param name='embed_code_version' value='3' /> 
+            <param name='name' value='TableuLab_17315334802240/Story1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https://public.tableau.com/static/images/Ta/TableuLab_17315334802240/Story1/1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+        </object>
+    </div>
+    <script type='text/javascript'>
+        var divElement = document.getElementById('viz1731903235285');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        vizElement.style.width='1016px';
+        vizElement.style.height='991px';
         var scriptElement = document.createElement('script');
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
         vizElement.parentNode.insertBefore(scriptElement, vizElement);
