--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - My Webpage</title>
+    <title>My Homepage</title>
 </head>
 <body>
-    <h1>Welcome to My Webpage!</h1>
-    <p>This is the homepage for my GitHub Pages project.</p>
-    <a href="myViz.html">View my visualizations</a>
+    <h1>Welcome to My Visualizations</h1>
+    <a href="myViz.html">View my visualizations</a><br>
+    <a href="https://public.tableau.com/app/profile/danny.vo/viz/Project3_17329044239400/Story1">View Tableau Dashboard: Fitness Trends</a>
 </body>
 </html>
